fix: increase modal overlay z-index

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -163,6 +163,10 @@ header.cf-page-header {
   z-index: 1000;
 }
 
+.ReactModal__Overlay--after-open {
+  z-index: 1001;
+}
+
 .cf-message-header:not(.visited) > a::before {
   content: "▶ ";
   font-size: 0.75em;
